--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,29 +2,25 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <ion-list>
-          <ion-radio-group [(ngModel)]="menuType" (ionChange)="redirectToPage()">
-            <ion-item>
-              <ion-label>Home</ion-label>
-              <ion-radio value="welcome"></ion-radio>
+        <ion-list id="inbox-list">
+          <ion-list-header>Inbox</ion-list-header>
+          <ion-note>hi&#64;ionicframework.com</ion-note>
+
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-label>{{ p.title }}</ion-label>
             </ion-item>
-            <ion-item>
-              <ion-label>Guia/Tutorial</ion-label>
-              <ion-radio value="guia"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Informacion para la simulacion</ion-label>
-              <ion-radio value="datos"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Simulacion</ion-label>
-              <ion-radio value="simulacion"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Ayuda</ion-label>
-              <ion-radio value="ayuda"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
+          </ion-menu-toggle>
+        </ion-list>
+
+        <ion-list id="labels-list">
+          <ion-list-header>Labels</ion-list-header>
+
+          <ion-item *ngFor="let label of labels" lines="none">
+            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
+            <ion-label>{{ label }}</ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
