--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,46 @@
+<!-- app.component.html -->
+
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+    <!-- Menú lateral -->
+    <ion-menu contentId="main-content" type="overlay" side="start">
+      <!-- Contenido del menú lateral -->
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menú</ion-title>
+        </ion-toolbar>
+      </ion-header>
       <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi&#64;ionicframework.com</ion-note>
-
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
+        <!-- Opciones del menú -->
+        <ion-list>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/home" routerDirection="root">
+              <ion-label>Home</ion-label>
+            </ion-item>
+            <ion-item routerLink="/guia" routerDirection="root">
+              <ion-label>Guia/Tutorial</ion-label>
+            </ion-item>
+            <ion-item routerLink="/ayuda" routerDirection="root">
+              <ion-label>Ayuda</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+
+    <!-- Contenido principal -->
+    <ion-router-outlet id="main-content" contentId="main-content"></ion-router-outlet>
+      <!-- Barra de navegación -->
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-menu-button auto-hide="false"></ion-menu-button>
+          </ion-buttons>
+          <ion-title>Tu Aplicación</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <!-- Contenido de la página -->
+      <ion-content>
+        <!-- Contenido de tus páginas -->
+      
