--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,12 @@
 </ion-header>
 
 <ion-content>
-  <h1>home work</h1>
+  <div class="welcome-message">
+    <!-- Insertar imagen desde URL -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Marca_Vertical_Universidad_Mayor_de_San_Sim%C3%B3n_Cochabamba_Bolivia.png" alt="Descripción de la imagen">
+    <h2 class="system-engineering">Ingeniería de Sistemas</h2>
+    <h1 class="welcome-heading">Bienvenido</h1>
+    <p class="investment-decisions">“Simulación para la toma de Decisiones sobre Inversiones”</p>
+  </div>
+  <ion-button expand="block" class="blue-button" (click)="empezarClicked()">Empezar</ion-button>
 </ion-content>
