--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,12 @@
             <ion-item routerLink="/guia" routerDirection="root">
               <ion-label>Guia/Tutorial</ion-label>
             </ion-item>
+            <ion-item routerLink="/datos" routerDirection="root">
+              <ion-label>Informacion para la simulacion</ion-label>
+            </ion-item>
+            <ion-item routerLink="/simulacion" routerDirection="root">
+              <ion-label>Simulacion</ion-label>
+            </ion-item>
             <ion-item routerLink="/ayuda" routerDirection="root">
               <ion-label>Ayuda</ion-label>
             </ion-item>
@@ -36,7 +42,7 @@
           <ion-buttons slot="start">
             <ion-menu-button auto-hide="false"></ion-menu-button>
           </ion-buttons>
-          <ion-title>Tu Aplicación</ion-title>
+          <ion-title></ion-title>
         </ion-toolbar>
       </ion-header>
 
