--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,11 @@
             <ion-item routerLink="/guia" routerDirection="root">
               <ion-label>Guia/Tutorial</ion-label>
             </ion-item>
-            <ion-item routerLink="/datos" routerDirection="root">
+            <ion-item routerLink="/info" routerDirection="root">
               <ion-label>Informacion para la simulacion</ion-label>
+            </ion-item>
+            <ion-item routerLink="/datos" routerDirection="root">
+              <ion-label>Datos</ion-label>
             </ion-item>
             <ion-item routerLink="/simulacion" routerDirection="root">
               <ion-label>Simulacion</ion-label>
