"menu bar arreglado"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
 
     <!-- Contenido principal -->
     <ion-router-outlet id="main-content" contentId="main-content"></ion-router-outlet>
+  </ion-split-pane>
       <!-- Barra de navegación -->
       <ion-header>
         <ion-toolbar>
@@ -48,8 +49,4 @@
           <ion-title></ion-title>
         </ion-toolbar>
       </ion-header>
-
-      <!-- Contenido de la página -->
-      <ion-content>
-        <!-- Contenido de tus páginas -->
-      
+</ion-app>
