--- a/src/app/guia/guia.component.html
+++ b/src/app/guia/guia.component.html
@@ -7,5 +7,41 @@
   </ion-header>
   
   <ion-content>
-    <h1>guia work</h1>
-  </ion-content>
+    <h1 position="floating" style="color: rgb(255, 255, 255);">Pasos para el uso de la aplicacion</h1>
+    <br>
+    <h1 position="floating" style="color: white;">Paso 1:</h1>
+    <br>
+    <p>Entrar al apartado de Datos</p>
+    <img src="" alt="Descripción de la imagen">
+    <br>
+    <p>En esta pestaña debes ingresar los datos con los que quieras que la aplicacion simule inversion</p>
+    <br>
+    <img src="" alt="Descripción de la imagen">
+    <p>En el cajon de "μ" de la inversion inicial, debes ingresar cuanto quieres que sea tu inversion inicial</p>
+    <p>En el cajon de "σ" de la inversion inicial, debes ingresar la desviación estandar que tendra la inversión inicial</p>
+    <p>En el cajon de "μ" del flujo neto, debes ingresar cuanto quieres que sea tu inversion inicial</p>
+    <p>En el cajon de "σ" del flujo neto, debes ingresar la desviación estandar que tendra la inversión inicial</p>
+    <p>Esto para calcular el valor pesimista, valor mas probable y valor optimista, que nos servira para la simulacion.</p>
+    <p>En el cajon "TREMA", debes ingresar el porcentaje de retorno minimo que quieres que te retorne para que el proyecto sea aceptado o rechazado</p>
+    <p>Presionar el boton "Insertar" para que genere el cuadro de valores pesimistas, optimista y mas probable</p>
+
+
+    <br>
+    <h1>Paso 2:</h1>
+    <br>
+    <p>Entrar al apartado de simulacion</p>
+    <img src="" alt="Descripción de la imagen">
+    <br>
+    <p>En esta pestaña debes ingresar el tiempo que quiere que simulemos </p>
+    <br>
+    <img src="" alt="Descripción de la imagen">
+    <p>En el cajon de "μ" de la inversion inicial, debes ingresar cuanto quieres que sea tu inversion inicial</p>
+    <p>En el cajon de "σ" de la inversion inicial, debes ingresar la desviación estandar que tendra la inversión inicial</p>
+    <p>En el cajon de "μ" del flujo neto, debes ingresar cuanto quieres que sea tu inversion inicial</p>
+    <p>En el cajon de "σ" del flujo neto, debes ingresar la desviación estandar que tendra la inversión inicial</p>
+    <p>Esto para calcular el valor pesimista, valor mas probable y valor optimista, que nos servira para la simulacion.</p>
+    <p>En el cajon "TREMA", debes ingresar el porcentaje de retorno minimo que quieres que te retorne para que el proyecto sea aceptado o rechazado</p>
+    <p>Presionar el boton "Insertar" para que genere el cuadro de valores pesimistas, optimista y mas probable</p>
+    <h2> </h2>
+
+    </ion-content>
