--- a/src/app/guia/guia.component.scss
+++ b/src/app/guia/guia.component.scss
@@ -8,4 +8,21 @@ ion-content {
     padding: 20px;
     z-index: 3;
   }
+  .header-title {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .step-card {
+    margin-bottom: 20px;
+  }
+
+  .step-title {
+    color: #fff;
+  }
+
+  .sub-title {
+    font-weight: bold;
+  }
   
