--- a/src/app/planteamiento/planteamiento.component.html
+++ b/src/app/planteamiento/planteamiento.component.html
@@ -6,6 +6,42 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <h1>Planteamiento work</h1>
+<ion-content class="ion-padding">
+  <h1 class="main-heading">Propósito</h1>
+  <p class="paragraph">El propósito principal de esta aplicación es proporcionarte una herramienta de simulación de inversiones. Utilizando un escenario específico como ejemplo, la aplicación te permitirá evaluar la viabilidad financiera de un proyecto antes de tomar la decisión de invertir.</p>
+
+  <h1 class="main-heading">Problema de Simulación</h1>
+  <p class="paragraph">Tomemos, por ejemplo, una empresa que está considerando ingresar a un nuevo negocio. Los detalles del proyecto, como la inversión inicial requerida y los ingresos netos anuales después de impuestos, se distribuyen de acuerdo con ciertos parámetros.</p>
+
+  <div class="sub-heading-container">
+    <p class="sub-heading"><strong>Inversión Inicial:</strong></p>
+    <p class="paragraph">La inversión inicial sigue una distribución normal con una media (μ) de 100,000 y una desviación estándar (σ) de 5,000.</p>
+  </div>
+
+  <div class="sub-heading-container">
+    <p class="sub-heading"><strong>Flujo Neto del Período:</strong></p>
+    <p class="paragraph">El flujo neto del período t sigue una distribución normal con una media (μ) de 30,000 y una desviación estándar (σ) de 3,000.</p>
+  </div>
+
+  <div class="sub-heading-container">
+    <p class="sub-heading"><strong>Criterios de Decisión:</strong></p>
+    <p class="paragraph">La empresa ha establecido que emprenderá el proyecto de inversión si la Tasa Interna de Retorno (TIR) es mayor que la Tasa de Retorno Mínima Aceptable (TREMA) con una probabilidad de al menos el 90%. En este caso, la TREMA se establece en un 30%.</p>
+  </div>
+
+  <div class="sub-heading-container">
+    <p class="sub-heading"><strong>Horizonte de Planeación:</strong></p>
+    <p class="paragraph">La simulación se llevará a cabo para un horizonte de planeación de 5 años, y se asume un valor de rescate al final de este tiempo de cero.</p>
+  </div>
+
+  <div class="sub-heading-container">
+    <p class="sub-heading"><strong>¿Cómo Puede Ayudarte la Aplicación?</strong></p>
+    <ul>
+      <li class="paragraph"><strong>Simulación Precisa: </strong>La aplicación realizará simulaciones detalladas del proyecto, teniendo en cuenta la variabilidad en la inversión inicial y los flujos netos anuales.</li>
+      <li class="paragraph"><strong>Resultados Claros: </strong>Obtén resultados claros y comprensibles sobre la probabilidad de que el proyecto sea rentable, ayudándote a tomar decisiones informadas sobre tu inversión.</li>
+      <li class="paragraph"><strong>Análisis Visual: </strong>Visualiza los resultados a través de gráficos y tablas para entender mejor las posibles variaciones en el rendimiento del proyecto.</li>
+      <li class="paragraph"><strong>Personalización: </strong>Ajusta los parámetros según tus propios escenarios y obten resultados específicos para tus necesidades.</li>
+    </ul>
+  </div>
 </ion-content>
+
+
