--- a/src/app/datos/datos.component.html
+++ b/src/app/datos/datos.component.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content>
+  <h2>  Valores Iniciales</h2>
   <form [formGroup]="miFormulario" (ngSubmit)="enviarFormulario()" novalidate *ngIf="miFormulario">
     <ion-item>
       <ion-label position="floating">Inversión Inicial</ion-label>
@@ -24,7 +25,6 @@
 </ion-item>
 <div *ngIf="miFormulario.get('desviacionInversionInicial')?.invalid && (miFormulario.get('desviacionInversionInicial')?.dirty || miFormulario.get('desviacionInversionInicial')?.touched)">
   <p *ngIf="miFormulario.get('desviacionInversionInicial')?.hasError('required')">La desviación de la inversión inicial es requerida.</p>
-  <p *ngIf="miFormulario.get('desviacionInversionInicial')?.hasError('max')">La desviación no puede ser mayor que la inversión inicial.</p>
   <p *ngIf="miFormulario.get('desviacionInversionInicial')?.hasError('min')">La desviación debe ser un número positivo.</p>
 </div>
  <!-- Mensajes de error para la desviación -->
@@ -47,7 +47,6 @@
     </ion-item>
     <div *ngIf="miFormulario.get('desviacionFlujoNeto')?.invalid && (miFormulario.get('desviacionFlujoNeto')?.dirty || miFormulario.get('desviacionFlujoNeto')?.touched)">
       <p *ngIf="miFormulario.get('desviacionFlujoNeto')?.hasError('required')">La desviación del flujo neto es requerida.</p>
-      <p *ngIf="miFormulario.get('desviacionFlujoNeto')?.hasError('max')">La desviación no puede ser mayor que el flujo neto inicial.</p>
       <p *ngIf="miFormulario.get('desviacionFlujoNeto')?.hasError('min')">La desviación debe ser un número positivo.</p>
     </div>
     
@@ -65,12 +64,12 @@
       <p *ngIf="miFormulario.get('tasaTREMA')?.hasError('required')">La tasa TREMA es requerida.</p>
       <p *ngIf="miFormulario.get('tasaTREMA')?.hasError('min') || miFormulario.get('tasaTREMA')?.hasError('max')">Ingrese un valor entre 1 y 100.</p>
     </div>
-
-    <ion-button type="submit" [disabled]="!miFormulario.valid" (click)="mostrarTablaClick()">Enviar</ion-button>
-    <!-- Botón para limpiar el formulario -->
-  <ion-button type="button" (click)="limpiarFormulario()">Limpiar</ion-button>
+    <div class="buttons-container">
+      <ion-button type="submit" [disabled]="!miFormulario.valid" >Enviar</ion-button>
+      <ion-button type="button" (click)="limpiarFormulario()" color="danger">Limpiar</ion-button>
+    </div>
   </form>
-  <!--<table *ngIf="mostrarTabla">
+  <table *ngIf="mostrarTabla">
     <thead>
       <tr>
         <th></th>
@@ -82,17 +81,17 @@
     <tbody>
       <tr>
         <td>Inversión Inicial</td>
-        <td>{{ calcularValores().inversionInicial.pesimista }}</td>
-        <td>{{ calcularValores().inversionInicial.masProbable }}</td>
-        <td>{{ calcularValores().inversionInicial.optimista }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.inversionInicial.pesimista }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.inversionInicial.masProbable }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.inversionInicial.optimista }}</td>
       </tr>
       <tr>
         <td>Flujo Neto</td>
-        <td>{{ calcularValores().flujoNeto.pesimista }}</td>
-        <td>{{ calcularValores().flujoNeto.masProbable }}</td>
-        <td>{{ calcularValores().flujoNeto.optimista }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.flujoNeto.pesimista }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.flujoNeto.masProbable }}</td>
+        <td *ngIf="calculatedValues">{{ calculatedValues.flujoNeto.optimista }}</td>
       </tr>
     </tbody>
-  </table>-->
-  
+  </table>
+
 </ion-content>
