--- a/src/app/ayuda/ayuda.component.html
+++ b/src/app/ayuda/ayuda.component.html
@@ -1,11 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Home
-    </ion-title>
+    <ion-title>Menú de Ayuda</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>ayuda work</h1>
+  <ion-list>
+    <ion-item [routerLink]="['/conceptos-basicos']">Conceptos Básicos</ion-item>
+    <ion-item [routerLink]="['/soporte-tecnico']">Soporte Técnico</ion-item>
+    <ion-item>
+      Guía
+      <ion-list>
+        <ion-item [routerLink]="['/video-guia']">Guía en Video</ion-item>
+        <ion-item [routerLink]="['/guia-escrita']">Guía Escrita</ion-item>
+      </ion-list>
+    </ion-item>
+  </ion-list>
 </ion-content>
