--- a/src/app/ayuda/ayuda.component.html
+++ b/src/app/ayuda/ayuda.component.html
@@ -4,16 +4,32 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item [routerLink]="['/conceptos-basicos']">Conceptos Básicos</ion-item>
-    <ion-item [routerLink]="['/soporte-tecnico']">Soporte Técnico</ion-item>
-    <ion-item>
-      Guía
+<ion-content class="ion-padding">
+  <h1>¿Cómo podemos ayudarte?</h1>
+  <!--<img src="../../assets/icon/Ayuda.png" alt="Ayuda Imagen" class="imagen-ayuda">-->
+  <ion-list lines="none">
+    <ion-item class="menu-item" [routerLink]="['/conceptos-basicos']">
+      <ion-icon name="book-outline" slot="start"></ion-icon>
+      <ion-label>Conceptos Básicos</ion-label>
+    </ion-item>
+
+    <ion-item class="menu-item" [routerLink]="['/soporte-tecnico']">
+      <ion-icon name="headset-outline" slot="start"></ion-icon>
+      <ion-label>Soporte Técnico</ion-label>
+    </ion-item>
+
+    <ion-item class="menu-item">
+      <ion-icon name="document-text-outline" slot="start"></ion-icon>
+      <ion-label>Guía</ion-label>
       <ion-list>
-        <ion-item [routerLink]="['/video-guia']">Guía en Video</ion-item>
-        <ion-item [routerLink]="['/guia-escrita']">Guía Escrita</ion-item>
+        <ion-item class="menu-item-sub" [routerLink]="['/video-guia']">
+          <ion-label>Guía en Video</ion-label>
+        </ion-item>
+        <ion-item class="menu-item-sub" [routerLink]="['/guia-escrita']">
+          <ion-label>Guía Escrita</ion-label>
+        </ion-item>
       </ion-list>
     </ion-item>
   </ion-list>
 </ion-content>
+
