--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -20,9 +20,8 @@
   <ion-button expand="block" class="blue-button" (click)="simularDatos()">Simular Datos</ion-button>
 
   <br>
-
   <!-- Tabla adicional para Valor de Rescate Total, FET Total y TIR -->
-  <table id="pdfContent">
+  <table #table1>
     <thead>
       <tr>
         <th>Valor de Rescate Total</th>
@@ -46,7 +45,7 @@
 
   <!-- Tabla con datos dinámicos -->
   <div class="table-container" >
-  <table class="tableprinc">
+  <table #table2 class="tableprinc">
     <thead>
       <tr>
         <th>Años</th>
@@ -67,6 +66,7 @@
       </tr>
     </tbody>
   </table>
+  <p #pdfContent id="pdfContent" ><strong>Conclusion:</strong></p>
 </div>
 <ion-button expand="block" class="blue-button" (click)="exportToPDF()">Exportar a PDF</ion-button>
 </ion-content>
