--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -26,7 +26,7 @@
   <div *ngIf="TIR !== 0">
     <p>Tasa Interna de Retorno (TIR): {{ TIR }}%</p>
   </div>
-  <table #table1>
+  <table #table1 class="blue-header">
     <thead>
       <tr>
         <th>Valor de Rescate Total</th>
@@ -50,7 +50,7 @@
 
   <!-- Tabla con datos dinámicos -->
   <div class="table-container" >
-  <table #table2 class="tableprinc">
+  <table #table2 class="tableprinc beige-header">
     <thead>
       <tr>
         <th>Años</th>
@@ -71,7 +71,14 @@
       </tr>
     </tbody>
   </table>
-  <p #pdfContent id="pdfContent" ><strong>Conclusion:</strong></p>
 </div>
-<ion-button expand="block" class="blue-button" (click)="exportToPDF()">Exportar a PDF</ion-button>
+<p #pdfContent id="pdfContent" *ngIf="mostrarConclusion"><strong>Conclusion:</strong>
+  <span *ngIf="estadoProyecto === 'Proyecto Aceptado'">
+    La Tasa Interna de Retorno {{ TIR }}% es más alta que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto tiene el potencial de generar más beneficios de los esperados, lo cual es una señal positiva. Por lo tanto, recomendamos aceptar el proyecto debido a que se espera que genere ganancias que superen nuestras expectativas mínimas. Esto sugiere que la inversión será rentable y nos permitirá recuperar nuestro dinero con rendimientos adicionales.
+  </span>
+  <span *ngIf="estadoProyecto === 'Proyecto Rechazado'">
+    La Tasa Interna de Retorno {{ TIR }}% es menor que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto no cumple con nuestras expectativas mínimas de rentabilidad. Por lo tanto, No se recomienda invertir en el proyecto, ya que no se espera que genere suficientes beneficios para justificar la inversión. Es mejor buscar otras oportunidades de inversión que ofrezcan rendimientos más atractivos y estén en línea con nuestros objetivos financieros.
+  </span>
+</p>
+<ion-button  expand="block" class="blue-button" (click)="exportToPDF()">Exportar a PDF</ion-button>
 </ion-content>
