--- a/src/app/simulacion/simulacion.component.scss
+++ b/src/app/simulacion/simulacion.component.scss
@@ -124,3 +124,25 @@ th {
 td > *:is(span, div, p, h1, h2, h3, h4, h5, h6, strong, b) {
   color: black; /* Color del texto de los números */
 }
+#pdfContent {
+  max-width: 600px; /* Ajusta el ancho máximo según sea necesario */
+  margin: 0 auto; /* Centra el contenedor horizontalmente */
+  text-align: justify; /* Justifica el texto para que se vea más limpio */
+  padding: 20px; /* Agrega un relleno alrededor del contenido */
+}
+
+#pdfContent strong {
+  color: white; /* Color del texto fuerte */
+  display: block; /* Rompe la línea después del texto fuerte */
+  margin-bottom: 10px; /* Agrega espacio después del texto fuerte */
+}
+
+#pdfContent span {
+  display: block;
+  margin-top: 10px; /* Espacio entre los párrafos */
+}
+
+.blue-button {
+  margin-top: 20px; /* Ajusta el margen superior del botón según sea necesario */
+}
+
