--- a/src/app/simulacion/simulacion.component.scss
+++ b/src/app/simulacion/simulacion.component.scss
@@ -124,25 +124,27 @@ th {
 td > *:is(span, div, p, h1, h2, h3, h4, h5, h6, strong, b) {
   color: black; /* Color del texto de los números */
 }
-#pdfContent {
-  max-width: 600px; /* Ajusta el ancho máximo según sea necesario */
-  margin: 0 auto; /* Centra el contenedor horizontalmente */
-  text-align: justify; /* Justifica el texto para que se vea más limpio */
-  padding: 20px; /* Agrega un relleno alrededor del contenido */
+.step-title {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
-#pdfContent strong {
-  color: white; /* Color del texto fuerte */
-  display: block; /* Rompe la línea después del texto fuerte */
-  margin-bottom: 10px; /* Agrega espacio después del texto fuerte */
+.step-card {
+  margin-bottom: 10px;
 }
 
-#pdfContent span {
-  display: block;
-  margin-top: 10px; /* Espacio entre los párrafos */
+.sub-title {
+  font-weight: bold;
 }
 
-.blue-button {
-  margin-top: 20px; /* Ajusta el margen superior del botón según sea necesario */
+.conclusion {
+  color: #000; /* Color del texto en la conclusión */
+  text-align: center;
+  background-color: #f2f2f2; /* Color de fondo de la conclusión */
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 5px;
 }
+
 
